# readii-idc-notebooks

./: .gitignore  README.md  pixi.toml  pyproject.toml
notebooks/: 0_DownloadPreparation.ipynb  1_NotebookA.ipynb  1_RunPyradiomics.ipynb  Reader.ipynb  SetupReport.html  download_result.ipynb  notebookA.ipynb  notebooks.md
src/readii_idc_notebooks/: __init__.py
